--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             class="flex flex-col lg:flex-row gap-8 items-center justify-center"
           >
             <li>
-              <a href="#home" class="nav-link">Home</a>
+              <a href="#home" class="nav-link active">Home</a>
             </li>
 
             <li>
@@ -84,7 +84,7 @@
 
           <div class="flex flex-col items-center gap-5 lg:flex-row">
             <!-- content -->
-            <div class="w-full space-y-5 lg:w-1/2">
+            <div class="home__data w-full space-y-5 lg:w-1/2">
               <h1>
                 <span class="text-yellow-500">Plants</span> make a
                 <br />positive <span class="text-yellow-500">impact </span>on
@@ -132,7 +132,7 @@
 
             <!-- image -->
             <div class="w-full relative lg:w-1/2">
-              <img src="assets/img/home.png" alt="home_image" />
+              <img src="assets/img/home.png" alt="home_image" class="home__image"/>
 
               <!-- leaf -->
               <div class="absolute -top-5 right-0 opacity-30 animate-movingY">
@@ -164,7 +164,7 @@
         >
           <!-- card 1 -->
           <div
-            class="border border-green-950 rounded-md p-5 cursor-pointer hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-5"
+            class="service__card border border-green-950 rounded-md p-5 cursor-pointer hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-5"
           >
             <div class="flex items-center gap-5">
               <i class="ri-truck-line text-3xl md:text-4xl xl:text-5xl"></i>
@@ -180,7 +180,7 @@
 
           <!-- card 2 -->
           <div
-            class="border border-green-950 rounded-md p-5 cursor-pointer hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-5"
+            class="service__card border border-green-950 rounded-md p-5 cursor-pointer hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-5"
           >
             <div class="flex items-center gap-5">
               <i
@@ -198,7 +198,7 @@
 
           <!-- card 3 -->
           <div
-            class="border border-green-950 rounded-md p-5 cursor-pointer hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-5"
+            class="service__card border border-green-950 rounded-md p-5 cursor-pointer hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-5"
           >
             <div class="flex items-center gap-5">
               <i class="ri-plant-line text-3xl md:text-4xl xl:text-5xl"></i>
@@ -214,7 +214,7 @@
 
           <!-- card 4 -->
           <div
-            class="border border-green-950 rounded-md p-5 cursor-pointer hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-5"
+            class="service__card border border-green-950 rounded-md p-5 cursor-pointer hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-5"
           >
             <div class="flex items-center gap-5">
               <i
@@ -234,7 +234,7 @@
 
       <!--~~~~~~~~~~~~~ About Us ~~~~~~~~~~~~~~-->
       <section id="about" class="relative overflow-hidden">
-        <div class="absolute -top-8 -right-12 opacity-50">
+        <div class="about__leaf absolute -top-8 -right-12 opacity-50">
           <img
             src="assets/img/leaf-3.png"
             alt="leaf_image"
@@ -243,7 +243,7 @@
         </div>
 
         <div
-          class="flex flex-col items-center gap-3 text-center mb-10 md:mb-20"
+          class="about__top flex flex-col items-center gap-3 text-center mb-10 md:mb-20"
         >
           <h2 class="title">About Us</h2>
           <p class="max-w-2xl">Follow instructions for more</p>
@@ -253,7 +253,7 @@
           <!-- item 1 -->
           <div class="flex flex-col lg:flex-row items-center gap-5">
             <!-- image -->
-            <div class="w-full lg:w-1/2">
+            <div class="about__item__1-img w-full lg:w-1/2">
               <img
                 src="assets/img/plant-1.png"
                 alt="about_image"
@@ -262,7 +262,7 @@
             </div>
 
             <!-- content -->
-            <div class="w-full lg:w-1/2">
+            <div class="about__item__1-content w-full lg:w-1/2">
               <div class="space-y-5">
                 <h3>
                   Make your <span class="text-yellow-500">Organic</span>
@@ -282,7 +282,7 @@
           <!-- item 2 -->
           <div class="flex flex-col items-center gap-5 lg:flex-row-reverse">
             <!-- image -->
-            <div class="w-full lg:w-1/2">
+            <div class="about__item__2-img w-full lg:w-1/2">
               <img
                 src="assets/img/plant-2.png"
                 alt="about_image"
@@ -291,7 +291,7 @@
             </div>
 
             <!-- content -->
-            <div class="w-full lg:w-1/2">
+            <div class="about__item__2-content w-full lg:w-1/2">
               <div class="space-y-5">
                 <h3>
                   Come with us <span class="text-yellow-500">grow up</span>
@@ -311,7 +311,7 @@
 
       <!--~~~~~~~~~~~~~ Popular ~~~~~~~~~~~~~~-->
       <section id="popular" class="bg-green-900">
-        <div class="flex flex-col items-center gap-3 text-center mb-48">
+        <div class="popular__top flex flex-col items-center gap-3 text-center mb-48">
           <h2 class="title">Your Choice Plant</h2>
           <p class="max-w-2xl">Follow instructions for more</p>
         </div>
@@ -443,7 +443,7 @@
 
       <!--~~~~~~~~~~~~~ Review ~~~~~~~~~~~~~~-->
       <section id="review" class="relative mb-20 md:mb-28 overflow-hidden">
-        <div class="absolute -top-8 -left-12 opacity-50">
+        <div class="review__leaf absolute -top-8 -left-12 opacity-50">
           <img
             src="assets/img/leaf-4.png"
             alt="leaf_image"
@@ -452,13 +452,13 @@
         </div>
 
         <div
-          class="flex flex-col items-center gap-3 text-center mb-10 md:mb-20"
+          class="review__top flex flex-col items-center gap-3 text-center mb-10 md:mb-20"
         >
           <h2 class="title">Custom Review</h2>
           <p class="max-w-2xl">Follow instructions for more</p>
         </div>
 
-        <div class="container">
+        <div class="review__swiper container">
           <div class="swiper py-12">
             <ul class="swiper-wrapper">
               <li class="swiper-slide">
@@ -613,7 +613,7 @@
       </div>
 
       <!-- social icon -->
-      <div class="container mt-16 mb-10">
+      <div class="footer__icon container mt-16 mb-10">
         <div class="border-b border-green-500 relative">
           <div class="absolute top-0 left-0 right-0 max-w-36 mx-auto transform -translate-y-1/2">
             <div class="bg-yellow-100 text-lg text-center space-x-2">
@@ -635,7 +635,7 @@
       </div>
 
       <!-- content -->
-      <div class="container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8 text-center md:text-start">
+      <div class="footer__content container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8 text-center md:text-start">
         <!-- item 1 -->
          <div class="">
             <div class="text-7xl text-green-700 text-center inline-block">
@@ -683,12 +683,12 @@
     </div>
 
       <!-- copyright -->
-       <div class="container">
+       <div class="copy__right container">
         <p class="text-center mt-10 opacity-50">Copyright &copy; 2024 Atik. All rights reserved.</p>
        </div>
 
       <!-- floral image -->
-       <div class="absolute bottom-0 left-0 opacity-20 pointer-events-none">
+       <div class="footer__floral absolute bottom-0 left-0 opacity-20 pointer-events-none">
         <img src="assets/img/floral-1.png" alt="floral_image" class="w-full lg:w-1/2">
        </div>
 
@@ -704,6 +704,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <!--~~~~~~~~~~~~~ SCROLLREVEAL ~~~~~~~~~~~~~~-->
+    <script src="assets/js/scrollreveal.min.js"></script>
 
     <!--~~~~~~~~~~~~~ mainjs ~~~~~~~~~~~~~~-->
     <script src="main.js"></script>
